test/good/arrays/decl02.px

a: [Int]
a = [2]
print a[0]
