test/bad/nullables/nullable06.px

a = [0]
a': [Int?] = a
